# docs/api-v1-openapi.json
@@ -269,10 +269,18 @@
       },
       "AtlasEntity": {
         "properties": {
+          "attributes": {
+            "additionalProperties": true,
+            "type": "object"
+          },
           "canonical_value": {
             "type": "string"
           },
           "first_seen_at": {
+            "nullable": true,
+            "type": "string"
+          },
+          "host_entity_id": {
             "nullable": true,
             "type": "string"
           },
@@ -3541,7 +3549,7 @@
   },
   "info": {
     "title": "darklab_shell API",
-    "version": "2.3.1"
+    "version": "2.4"
   },
   "openapi": "3.0.3",
   "paths": {
@@ -3675,7 +3683,8 @@
                 "ip",
                 "url",
                 "hash",
-                "cve"
+                "cve",
+                "port"
               ],
               "type": "string"
             }
@@ -5506,7 +5515,8 @@
                 "ip",
                 "url",
                 "hash",
-                "cve"
+                "cve",
+                "port"
               ],
               "type": "string"
             }
